# aro

./: .env.example  .gitignore  CLAUDE.md  aro-context-summary.md  codex-update.md
backend/: config.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2fb0d0e63a1c_add_clinic_fields_to_users.py  533f94445ef3_initial_schema.py  dc625593ac9a_add_personal_codebook_to_users.py
backend/api/: codebook.py  dashboard.py  documents.py  encounters.py  patients.py  polypharmacy.py  prescriptions.py  reports.py  screening.py  v1.py  visits.py
backend/core/: audit.py  database.py  scheduler.py  security.py
backend/core/llm/: guards.py  service.py
backend/core/models/: __init__.py  audit_log.py  base.py  document.py  encounter.py  encryption.py  enums.py  follow_up_alert.py  patient.py  prescription.py  (+3 more)
backend/scripts/: seed_test_data.py
backend/tests/: conftest.py  test_assembler.py  test_audit.py  test_auth.py  test_codebook.py  test_dashboard_api.py  test_ddi_checker.py  test_document_guards.py  test_document_prompts.py  test_document_renderer.py  test_document_service.py  test_documents_api.py  test_encounters.py  test_guards.py  test_health.py  test_normalizer.py  test_patients.py  test_polypharmacy_api.py  test_polypharmacy_service.py  test_prescriptions_api.py  test_renal_dosing.py  test_reports_api.py  test_scheduler.py  test_screening_api.py  test_screening_bulk_upload.py  test_screening_classifier.py  test_screening_followup.py  test_sick_day.py  test_sick_day_advanced.py  test_soap_service.py  test_visits_api.py  test_vitals.py
(+194 files in other folders)
